<resources>
    <string name="locale_title">Select Language</string>
    <string name="crossing_title">Trail Run</string>
    <string name="crossing_end_sport">Please stop trail run first</string>
    <string name="crossing_in_progress">Trail Running...</string>
    <string name="crossing_max_step_freq_desc">Max Cadence</string>
    <string name="crossing_climb_up">Elevation Gain</string>
    <string name="crossing_climb_down">Elevation Loss</string>
    <string name="crossing_vertical_speed">Vertical Speed</string>
    <string name="crossing_individual_pen_dis">Single lap distance</string>
    <string name="crossing_individual_pen_cost_time">Single lap time</string>
    <string name="crossing_individual_pen_pace">Single lap pace</string>
    <string name="crossing_climb_unit">Feet</string>
    <string name="crossing_vertical_velocity_unit">ft/h</string>
    <string name="crossing_history_detail_total_time">Total time</string>
    <string name="crossing_history_detail_move_time">Moving time</string>
    <string name="crossing_history_detail_ave_move_pace">Average moving pace</string>
    <string name="crossing_history_detail_ave_move_pace_unit">/mi</string>
    <string name="crossing_history_detail_best_pace">Best pace</string>
    <string name="crossing_history_detail_ave_move_speed">Average moving speed</string>
    <string name="crossing_history_detail_max_speed">Max speed</string>
    <string name="crossing_history_detail_climb_up">Elevation Gain</string>
    <string name="crossing_history_detail_climb_down">Elevation Loss</string>
    <string name="crossing_history_detail_absolute_altitude">Altitude</string>
    <string name="crossing_history_detail_high_altitude">Max Altitude</string>
    <string name="crossing_history_detail_low_altitude">Min Altitude</string>
    <string name="crossing_history_detail_altituede_graph_desc">Altitude (feet)</string>
    <string name="crossing_history_detail_individual_km">%1$s mile for a single loop</string>
    <string name="crossing_setting_unit">Mile</string>
    <string name="crossing_settings_item_title_individual_remind">Single lap distance</string>
    <string name="crossing_settings_item_value_individual">%1s kms</string>
    <string name="crossing_remind_target_individual_title">Lap %1d</string>
    <string name="crossing_remind_target_individual_cost_time">Elapsed time</string>
    <string name="crossing_remind_target_individual_pace">Pace</string>
    <string name="agps_time_out">AGPS has expired. GPS searching will be slow. Please connect the Amazfit Watch App to update it.</string>
    <string name="safe_hearate_remind_content">When above %1d</string>
    <string name="settings_safe_heart_rate_hint">(safe heart rate)</string>
    <string name="settings_safe_heart_rate_unit">bpm</string>
    <string name="elliptical">Elliptical</string>
    <string name="elliptical_in_progress">Elliptical in progress</string>
    <string name="experience_title">Please set up personal information, or data will have a large deviation</string>
    <string name="sport_setting_gpx_route_selected">Track selected</string>
    <string name="sport_setting_gpx_route_selectd_remind">Outdoor sports function will use this trajectory to navigate, if no navigation please select off to close the track navigation</string>
    <string name="confirm">Ok</string>
    <string name="decision_yes">Yes</string>
    <string name="decision_no">No</string>
    <string name="use_sport_route_remind">Use the %1$s track?</string>
    <string name="please_start_sport_from_route_start">To ensure the accuracy of the track navigation, start exercise at the real geographical position of the track starting point</string>
    <string name="please_become_bigger">Enlarge</string>
    <string name="please_become_smaller">Shrink</string>
    <string name="current_altitude">Cur alt</string>
    <string name="cumulative_climb">Cumul climb</string>
    <string name="sport_route_out_of">Deviated from track</string>
    <string name="sport_back_to_route">Back on track</string>
    <string name="gpx_currnet_is_selected">selected</string>
    <string name="gpx_select_closed">Closed</string>
    <string name="gpx_select_empty" />
    <string name="gpx_details_view">Selected</string>
    <string name="gpx_details_use">Usage</string>
    <string name="gpx_route_loading">Please wait for track loading</string>
    <string name="dialog_remind_to_look_route">Look at the track</string>
    <string name="gpx_offset_route">Track offset</string>
    <string name="gpx_back_route">Back on track</string>
    <string name="gpx_alreay_offset">Off-track</string>
    <string name="indoor_run_progressing">Running</string>
    <string name="music_title">Music</string>
    <string name="music_local_title">Sports music</string>
    <string name="music_no_resource">No songs to play</string>
    <string name="music_no_local_resource">No songs to play, please connect USB to import.</string>
    <string name="music_open_fm">Turn on the music function to listen to music during workout.</string>
    <string name="music_explain_title">Description</string>
    <string name="music_explain_content">It is necessary to download songs locally and connect to the Bluetooth headset for listening.</string>
    <string name="music_start_tips">Need Bluetooth headset is connected, connect now?</string>
    <string name="music_not_known">Unknown</string>
    <string name="music_update_content">Song update</string>
    <string name="music_update_tips_content">Watercress FM updates songs regularly. Updating songs will replace the music library. Update now?</string>
    <string name="music_pause">Paused</string>
    <string name="music_fm_title">Watercress FM</string>
    <string name="music_fm_notification_content">The Sports FM has some new playlists, go and download it!</string>
    <string name="music_down_not_complete_title">The song list has not been fully downloaded, exit?</string>
    <string name="music_down_not_complete_content">After logging out, songs can be updated in the Music settings - Watercress FM offline.</string>
    <string name="music_source_douban">Watercress FM</string>
    <string name="music_source_local">Local songs</string>
    <string name="music_source_all">All</string>
    <string name="music_init_not_done">Music is initializing...</string>
    <string name="music_no_douban_resource">No songs to play, download now?</string>
    <string name="sport_widget_title_outdoor_riding">Bike</string>
    <string name="sport_widget_title_indoor_riding">Bike Indoor</string>
    <string name="outdoor_riding_progressing">Cycling</string>
    <string name="indoor_riding_progressing">Cycling</string>
    <string name="outdoor_climb_distance">Ground speed distance</string>
    <string name="outdoor_climb_altitude">Elevation Gain</string>
    <string name="outdoor_max_cadence">Max Cadence</string>
    <string name="outdoor_ave_cadence">Average cadence</string>
    <string name="outdoor_cadence">Cadence</string>
    <string name="outdoor_graph_unit">Distance(mile)</string>
    <string name="outdoor_speed_graph_title">Speed(mi/h)</string>
    <string name="not_testing_speed_data">Speed data not detected</string>
    <string name="con_leqi_table_title">Watch has support LEQI riding table, is Connected now?</string>
    <string name="con_leqi_table_subtitle">(Bind in System settings-Bluetooth device)</string>
    <string name="unit_cadence">rpm</string>
    <string name="remind_target_riding_km_title_format">Completed %1$d mi</string>
    <string name="indoor_riding_time_too_short">Exercise time is too short to save. Are you sure to stop?</string>
    <string name="outdoor_climb_down_altitude">Cumulative elevation loss</string>
    <string name="outdoor_climb_down_distance">Downhill distance</string>
    <string name="outdoor_climb_down_distance_time">Downhill time</string>
    <string name="outdoor_climb_distance_time">Uphill slope time</string>
    <string name="route_cur_altitude">Current altitude</string>
    <string name="route_glevation_gain">Elevation Gain</string>
    <string name="route_scale_enlarge">Enlarge</string>
    <string name="route_scale_narrow">Narrow</string>
    <string name="route_cur_altitude_value">%1dm</string>
    <string name="route_climb_up_value">%1dm</string>
    <string name="sport_widget_title">Sports</string>
    <string name="sport_widget_title_run">Run</string>
    <string name="sport_widget_title_walk">Walk</string>
    <string name="sport_widget_title_cross">Trail Run</string>
    <string name="sport_widget_title_indoor_run">Run Indoor</string>
    <string name="sport_widget_title_record">Activities</string>
    <string name="sport_widget_title_achieve">Badges</string>
    <string name="sport_widget_title_setting">Settings</string>
    <string name="sport_widget_title_music">Music</string>
    <string name="app_name">Sports</string>
    <string name="sport_item_running_title">Run</string>
    <string name="sport_item_walking_title">Walking</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_sport_list">Outdoor activities</string>
    <string name="title_sport_gps_available">GPS available</string>
    <string name="title_sport_gps_unavailable">Waiting for GPS</string>
    <string name="title_sport_control_runnning">Run</string>
    <string name="title_sport_control_walking">Walking</string>
    <string name="sport_start">Start</string>
    <string name="sport_pause">Pause</string>
    <string name="sport_continue">Resume</string>
    <string name="sport_stop">Stop</string>
    <string name="sport_notification_view_detail">Open sports</string>
    <string name="sport_notification_stop">End the exercise</string>
    <string name="sport_notification_title">Sports</string>
    <string name="sport_notification_content">%s mile</string>
    <string name="title_activity_running">RunningActivity</string>
    <string name="running_kilometers">mi</string>
    <string name="running_cost_time_desc">Elapsed time</string>
    <string name="running_pace_desc">Pace</string>
    <string name="running_calorie_desc">Calories</string>
    <string name="running_step_freq_desc">Cadence</string>
    <string name="running_speed_desc">Speed</string>
    <string name="running_distance_desc">Mileage</string>
    <string name="running_heartrate_desc">Heart Rate</string>
    <string name="running_avg_pace_desc">Average pace</string>
    <string name="running_avg_speed_desc">Average speed</string>
    <string name="running_avg_step_freq_desc">Average Cadence</string>
    <string name="running_pace_unit">/mi</string>
    <string name="running_calorie_unit">kCal</string>
    <string name="running_step_freq_unit">spm</string>
    <string name="running_speed_unit">mi/h</string>
    <string name="default_double_value">0.00</string>
    <string name="default_time_value">00:00:00</string>
    <string name="default_int_value">0</string>
    <string name="history_detail_running_title">Run</string>
    <string name="history_detail_cost_time">Total time</string>
    <string name="history_detail_paused_time">Pause time</string>
    <string name="default_pace_value">"00'00\""</string>
    <string name="history_detail_calorie_desc">Calories (kCal)</string>
    <string name="history_heart_rate_graph_desc">Heart Rate (bpm)</string>
    <string name="count_down_one">1</string>
    <string name="count_down_two">2</string>
    <string name="count_down_three">3</string>
    <string name="sport_in_progress_confirm">Confirm</string>
    <string name="sport_history_detail_heart_unit">Unit (h:m:s)</string>
    <string name="lock_screen">Screen locked</string>
    <string name="txt_unlock_screen">Please press and hold the screen to unlock</string>
    <string name="sport_screen_un_lock">Unlocked</string>
    <string name="count_down_tint">Please wear the watch snuggly for accurate heart rate results</string>
    <string name="history_detail_running_cost_time">Moving Time</string>
</resources>