<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/sport_running_bg" android:paddingTop="14.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.sport.ui.view.NumberTextView android:textSize="@dimen/sport_count_down_size" android:gravity="center" android:layout_gravity="center" android:id="@id/count_text_one_view" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/count_down_one" style="@style/sport_count_down_num_text_style" />
    <com.huami.watch.sport.ui.view.NumberTextView android:textSize="@dimen/sport_count_down_size" android:gravity="center" android:layout_gravity="center" android:id="@id/count_text_two_view" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/count_down_two" style="@style/sport_count_down_num_text_style" />
    <com.huami.watch.sport.ui.view.NumberTextView android:textSize="@dimen/sport_count_down_size" android:gravity="center" android:layout_gravity="center" android:id="@id/count_text_three_view" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/count_down_three" style="@style/sport_count_down_num_text_style" />
    <com.huami.watch.common.widget.HmTextView android:gravity="center" android:id="@id/tint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/count_down_margin_left_right" android:layout_marginBottom="@dimen/count_down_margin_bottom" android:text="@string/count_down_tint" android:layout_alignParentBottom="true" android:lineSpacingExtra="@dimen/count_down_line_space" android:layout_marginStart="@dimen/count_down_margin_left_right" style="@style/count_down_tint_style" />
</RelativeLayout>