<?xml version="1.0" encoding="utf-8"?>
<com.huami.watch.common.widget.HmScrollView android:id="@id/history_detail_root" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fadeScrollbars="true" style="@style/sport_history_root_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.huami.watch.common.widget.HmRelativeLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/swipe_view" android:paddingTop="18.0dip" android:clipChildren="false" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.huami.watch.common.widget.HmTextView android:textSize="19.0sp" android:textColor="@color/default_font_color_white" android:id="@id/history_detail_sport_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/history_detail_running_title" android:layout_centerHorizontal="true" style="@style/sport_text_style" />
        <TextView android:textSize="12.0sp" android:textColor="@color/default_font_color_white" android:id="@id/history_detail_sport_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/history_detail_sport_title" android:layout_centerHorizontal="true" style="@style/sport_num_text_style" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_distance_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/running_distance_desc" android:layout_below="@id/history_detail_sport_time" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_distance" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_double_value" android:layout_below="@id/history_detail_sport_distance_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_cost_time_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/history_detail_cost_time" android:layout_below="@id/history_detail_sport_distance" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_cost_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_time_value" android:layout_below="@id/history_detail_sport_cost_time_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_runnig_sport_cost_time_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/history_detail_running_cost_time" android:layout_below="@id/history_detail_sport_cost_time" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_running_cost_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_time_value" android:layout_below="@id/history_detail_runnig_sport_cost_time_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_pause_time_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/history_detail_paused_time" android:layout_below="@id/history_detail_sport_running_cost_time" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_pause_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_time_value" android:layout_below="@id/history_detail_sport_pause_time_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_calories_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/running_calorie_desc" android:layout_below="@id/history_detail_sport_pause_time" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_calories" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/history_detail_calorie_desc" android:layout_below="@id/history_detail_sport_calories_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_calorie_unit" android:layout_alignBaseline="@id/history_detail_sport_calories" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_calories" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_pace_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/crossing_history_detail_ave_move_pace" android:layout_below="@id/history_detail_sport_calories" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_pace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_pace_value" android:layout_below="@id/history_detail_sport_pace_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_pace_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_pace_unit" android:layout_alignBaseline="@id/history_detail_sport_pace" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_pace" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_best_pace_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/crossing_history_detail_best_pace" android:layout_below="@id/history_detail_sport_pace" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_best_pace" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_pace_value" android:layout_below="@id/history_detail_sport_best_pace_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_best_pace_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_pace_unit" android:layout_alignBaseline="@id/history_detail_sport_best_pace" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_best_pace" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_speed_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/crossing_history_detail_ave_move_speed" android:layout_below="@id/history_detail_sport_best_pace" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_pace_value" android:layout_below="@id/history_detail_sport_speed_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_speed_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_speed_unit" android:layout_alignBaseline="@id/history_detail_sport_speed" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_speed" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_max_speed_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/crossing_history_detail_max_speed" android:layout_below="@id/history_detail_sport_speed" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_max_speed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_pace_value" android:layout_below="@id/history_detail_sport_max_speed_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_max_speed_unit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_speed_unit" android:layout_alignBaseline="@id/history_detail_sport_max_speed" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_max_speed" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_step_freq_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/running_avg_step_freq_desc" android:layout_below="@id/history_detail_sport_max_speed" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_step_freq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_int_value" android:layout_below="@id/history_detail_sport_step_freq_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_step_freq_unit" android:layout_alignBaseline="@id/history_detail_sport_step_freq" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_step_freq" style="@style/sport_history_item_unit" />
        <com.huami.watch.common.widget.HmTextView android:id="@id/history_detail_sport_max_step_freq_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_item_margin" android:text="@string/crossing_max_step_freq_desc" android:layout_below="@id/history_detail_sport_step_freq" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_title" />
        <com.huami.watch.sport.ui.view.NumberTextView android:id="@id/history_detail_sport_max_step_freq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sport_history_detail_title_num_margin" android:layout_marginBottom="@dimen/sport_history_detail_info_vertical_margin" android:text="@string/default_int_value" android:layout_below="@id/history_detail_sport_max_step_freq_desc" android:layout_marginStart="@dimen/sport_history_detail_margin_start" style="@style/sport_history_item_value" />
        <com.huami.watch.common.widget.HmTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/running_step_freq_unit" android:layout_alignBaseline="@id/history_detail_sport_max_step_freq" android:layout_marginStart="4.0dip" android:layout_toEndOf="@id/history_detail_sport_max_step_freq" style="@style/sport_history_item_unit" />
        <FrameLayout android:layout_width="@dimen/sport_history_detail_trail_width" android:layout_height="@dimen/sport_history_detail_trail_height" android:layout_below="@id/history_detail_sport_time" android:layout_marginEnd="@dimen/sport_history_detail_margin" android:layout_alignParentEnd="true">
            <ImageView android:layout_gravity="center" android:id="@id/history_detail_sport_trail" android:visibility="invisible" android:layout_width="@dimen/sport_history_detail_trail_width" android:layout_height="@dimen/sport_history_detail_trail_height" />
            <com.huami.watch.sport.ui.TrailAnimView android:layout_gravity="center" android:id="@id/history_detail_sport_anim_trail" android:visibility="invisible" android:layout_width="@dimen/sport_history_detail_trail_width" android:layout_height="@dimen/sport_history_detail_trail_height" />
            <View android:layout_gravity="center" android:id="@id/sport_trail_loading" android:background="@drawable/sport_map_loading" android:layout_width="19.0px" android:layout_height="19.0px" />
        </FrameLayout>
        <include android:id="@id/heart_rate_split_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginBottom="20.0dip" android:layout_below="@id/history_detail_sport_max_step_freq" layout="@layout/split_line" />
        <com.huami.watch.common.widget.HmRelativeLayout android:id="@id/heart_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/heart_rate_split_line">
            <com.huami.watch.common.widget.HmTextView android:textSize="18.699982sp" android:textColor="@color/default_font_color_white" android:id="@id/history_detail_heartrate_graph" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/history_heart_rate_graph_desc" android:layout_centerHorizontal="true" style="@style/sport_text_style" />
            <com.huami.watch.common.widget.LineChart android:id="@id/history_detail_heartrate" android:layout_below="@id/history_detail_heartrate_graph" style="@style/sport_history_detail_heart_rate_graph" />
            <View android:id="@id/cache_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="116.0dip" android:layout_marginTop="11.0dip" android:layout_marginBottom="32.0dip" android:layout_below="@id/history_detail_heartrate_graph" android:layout_centerHorizontal="true" />
            <com.huami.watch.common.widget.HmTextView android:textSize="12.0sp" android:textColor="@color/default_font_color_white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-25.0dip" android:text="@string/sport_history_detail_heart_unit" android:layout_below="@id/history_detail_heartrate" android:layout_centerHorizontal="true" style="@style/sport_text_style" />
        </com.huami.watch.common.widget.HmRelativeLayout>
        <RelativeLayout android:gravity="center" android:id="@id/delete_summary_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/heart_container" android:layout_centerHorizontal="true">
            <Button android:textSize="@dimen/delete_btn_txt_size" android:textColor="@android:color/white" android:id="@id/delete_summary" android:background="@drawable/button_backgroud_selector" android:focusable="false" android:clickable="false" android:layout_width="@dimen/delete_btn_width" android:layout_height="@dimen/delete_btn_height" android:layout_marginTop="@dimen/delete_btn_margin_top" android:layout_marginBottom="@dimen/delete_btn_margin_bottom" android:text="@string/sport_in_progress_confirm" />
        </RelativeLayout>
    </com.huami.watch.common.widget.HmRelativeLayout>
</com.huami.watch.common.widget.HmScrollView>